Ok, time to add Design

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 <html>
 <body>
-	create your memory here
+	<h2> Create A Memory Pool<h3>
 	<form action="create" method="POST">
-		<input type="text" name="text">
-		<input type="submit">
+		Go to /memorypool/<input type="text" name="text">
+		<input type="submit" value="Go">
 	</form>
 </body>
 </html>
