Playing with bootstrap and flask templates :D

--- a/templates/create.html
+++ b/templates/create.html
@@ -1,5 +1,6 @@
-<html>
-<body>
+{% extends "layout.html" %}
+{% block title %} Memory Pool {% endblock %}
+{% block content %
 	<h2> Setup A Memory Pool<h3>
 	<p>Login through any one service to store Pool memories</p>
 	<a href={{url}}>Flickr</a>
@@ -7,5 +8,4 @@
 	or
 	<br>
 	<a href="">Use google+</a>
-</body>
-</html>
+{% endblock %}
