--- a/templates/create.html
+++ b/templates/create.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block title %} Memory Pool {% endblock %}
-{% block content %
+{% block content %}
 	<h2> Setup A Memory Pool<h3>
 	<p>Login through any one service to store Pool memories</p>
 	<a href={{url}}>Flickr</a>
