I don't remember what i did in this commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         };
         if(snapshot.val() == null){
               $("#login-error").slideUp();
-              $('#index-btn').attr('disabled',false);
+              $('#index-btn').attr('disabled',false).addclass("disabled");
         }
 
         });
