--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
 	{% block head %}
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title> {% block title %}Memory Pool{% endblock %} </title>
 		<link rel="stylesheet" href="../static/css/custom.css" type="text/css"/>
 	<link rel="stylesheet" href="../static/css/bootstrap.min.css" type="text/css"/>
@@ -12,12 +12,6 @@
 <body>
 	<script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-	<script type="text/javascript">
-		var fb = new Firebase('https://memory-pool.firebaseio.com/');
-		$( ".index-input" ).on('input',function() {
-  alert( "Handler for .change() called." );
-});
-	</script>
 	<script src="../static/js/bootstrap.min.js"></script>
 	<div class="container">
       <div class="header">
@@ -25,7 +19,7 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
         </ul>
-        <h1><a href="#">Memory Pool</a></h1>
+        <h1><a href="/">Memory Pool</a></h1>
       </div>
       {% block content %}
       {% endblock %}
