--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,8 +10,8 @@
 	{% endblock %}	
 </head>
 <body>
+  <script type="text/javascript" src="../static/js/jquery-2.0.3.min.js"></script>
 	<script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
-	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script src="../static/js/bootstrap.min.js"></script>
 	<div class="container">
       <div class="header">
