--- a/templates/upload.html
+++ b/templates/upload.html
@@ -9,7 +9,7 @@
            <div style="position:relative;">
             <a class='btn btn-primary' href='javascript:;'>
             Choose File...
-            <input type="file" style='position:absolute;z-index:2;top:0;left:0;filter: alpha(opacity=0);-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";opacity:0;background-color:transparent;color:transparent;' name="file_source" id="file" size="40"  onchange='$("#upload-file-info").html($(this).val());'>
+            <input type="file" style='position:absolute;z-index:2;top:0;left:0;filter: alpha(opacity=0);-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";opacity:0;background-color:transparent;color:transparent;' name="file_source" id="file" size="40"  onchange='$("#upload-file-info").html($(this).val());' multiple>
             </a>
             &nbsp;
             <span class='label label-info' id="upload-file-info"></span>
@@ -76,7 +76,12 @@
 
     	};
     	$("#file").change(function(e){
-    		upload_file(e.target.files[0]);
+
+            for (var i = 0; i < e.target.files.length; i++) {
+                upload_file(e.target.files[i]);
+            };
+            
+    		//upload_file(e.target.files[0]);
     		e.target.value = '';
     	});
 
